--- a/Order-Payment-Service.yml
+++ b/Order-Payment-Service.yml
@@ -3,9 +3,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ashokit_ecomm
+    url: jdbc:mysql://localhost:3306/kannan_ecomm
     username: root
-    password: root
+    password: '!!June@2023'
   jpa:
     hibernate:
       ddl-auto: update
