--- a/Product-Service.yml
+++ b/Product-Service.yml
@@ -3,7 +3,8 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/kannan_ecomm
+    # url: jdbc:mysql://localhost:3306/kannan_ecomm
+    url: jdbc:mysql://host.docker.internal:3306/kannan_ecomm
     username: root
     password: '!!June@2023'
 
